--- a/src/pages/home/index.module.css
+++ b/src/pages/home/index.module.css
@@ -14,3 +14,17 @@
     display: flex;
     justify-content: space-between;
 }
+
+.divTopArtists{
+    width: 85%;
+    display: flex;
+    flex-direction: column;
+    color: white;
+}
+
+.containerTopArtists{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    height: 200px;
+}
