--- a/src/components/search/index.module.css
+++ b/src/components/search/index.module.css
@@ -6,6 +6,7 @@
     align-items: center;
     background-color: #434343;
     border-radius: 6px;
+    box-shadow: 0px 0px 1px rgb(87, 87, 87);
 }
 
 .inputSearch{
