--- a/src/components/topPlaylists/index.module.css
+++ b/src/components/topPlaylists/index.module.css
@@ -8,18 +8,17 @@
     color: rgb(223, 223, 223);
 }
 
-.ftArtist{
-    width: 140px;
-    height: 140px;
-    border-radius: 50%;
+.ftPlaylist{
+    width: 145px;
+    height: 145px;
     cursor: pointer;
     transition: 100ms;
 }
 
-.ftArtist:hover{
-    width: 145px;
-    height: 145px;
-    border-radius: 50%;
+.ftPlaylist:hover{
+    width: 150px;
+    height: 150px;
+    border-radius: 6px;
     cursor: pointer;
     border: 1px solid #00df60;
-    }
+}
