--- a/src/pages/home/index.module.css
+++ b/src/pages/home/index.module.css
@@ -2,7 +2,7 @@
 .page{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     background: linear-gradient(45deg, #101010, #1D1D1D);
     min-width: 100vw;
@@ -13,6 +13,7 @@
     width: 85%;
     display: flex;
     justify-content: space-between;
+    margin-top: 50px;
 }
 
 .divTopArtists{
@@ -23,6 +24,13 @@
 }
 
 .containerTopArtists{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    height: 200px;
+}
+
+.containerTopPlaylists{
     display: flex;
     justify-content: space-between;
     width: 100%;
