--- a/src/components/topArtist/index.module.css
+++ b/src/components/topArtist/index.module.css
@@ -1,5 +1,4 @@
-
-.main{
+.main {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -8,18 +7,19 @@
     color: rgb(223, 223, 223);
 }
 
-.ftArtist{
+.ftArtist {
     width: 140px;
     height: 140px;
     border-radius: 50%;
     cursor: pointer;
+    box-shadow: 0px 0px 10px rgb(29, 29, 29);
     transition: 100ms;
+    border: 1px solid transparent;
 }
 
-.ftArtist:hover{
-    width: 145px;
-    height: 145px;
+.ftArtist:hover {
     border-radius: 50%;
     cursor: pointer;
+    transform: scale(1.07);
     border: 1px solid #00df60;
-    }
+}
