--- a/src/components/topPlaylists/index.module.css
+++ b/src/components/topPlaylists/index.module.css
@@ -9,16 +9,17 @@
 }
 
 .ftPlaylist{
-    width: 145px;
-    height: 145px;
+    width: 170px;
+    height: 170px;
     cursor: pointer;
     transition: 100ms;
+    box-shadow: 0px 0px 10px rgb(29, 29, 29);
+    border: 1px solid transparent;
 }
 
 .ftPlaylist:hover{
-    width: 150px;
-    height: 150px;
     border-radius: 6px;
     cursor: pointer;
     border: 1px solid #00df60;
+    transform: scale(1.07);
 }
