--- a/src/pages/home/index.module.css
+++ b/src/pages/home/index.module.css
@@ -10,7 +10,7 @@
     justify-content: center;
     gap: 10px;
     width: 100%;
-    height: 90%;
+    height: 88%;
 }
 
 .playlistBar {
@@ -68,6 +68,14 @@
     justify-content: space-between;
     width: 100%;
     height: 200px;
+}
+
+.divMusicBar{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 100%;
+    height: 12%;
 }
 
 ::-webkit-scrollbar {
