--- a/src/components/multiMedia/index.module.css
+++ b/src/components/multiMedia/index.module.css
@@ -5,8 +5,9 @@
 
 .containerOP {
     display: flex;
-    align-items: center;
-    justify-content: space-around;
+    align-items: end;
+    justify-content: center;
+    gap: 15%;
     width: 100%;
     height: 50%;
 }
@@ -15,7 +16,6 @@
     width: 100%;
     height: 50%;
     display: flex;
-    align-items: center;
     justify-content: center;
 }
 
