--- a/src/components/musicMenu/index.module.css
+++ b/src/components/musicMenu/index.module.css
@@ -8,10 +8,11 @@
 }
 
 .containerFt{
-    width: 13%;
-    height: 70%;
-    margin-left: 3%;
+    width: 14%;
+    height: 80%;
+    margin-left: 2.5%;
     border-radius: 10px;
+    box-shadow: 0px 0px 10px #040404;
 }
 
 .containerMusicName{
