--- a/src/pages/home/index.module.css
+++ b/src/pages/home/index.module.css
@@ -40,8 +40,6 @@
 .containerSearch {
     margin-top: 10px;
     width: 98%;
-    display: flex;
-    justify-content: space-between;
 }
 
 .divTopArtists {
@@ -78,6 +76,24 @@
     justify-content: space-around;
     width: 100%;
     height: 12%;
+}
+
+.divPlaylist{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    width: 80%;
+    height: 90%;
+    margin-top: 15px;
+}
+
+.containerbtnPlaylistbar{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 80%;
+    height: 10%;
 }
 
 ::-webkit-scrollbar {
