--- a/src/components/topArtist/index.module.css
+++ b/src/components/topArtist/index.module.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+
 .main {
     display: flex;
     flex-direction: column;
@@ -5,6 +7,7 @@
     justify-content: center;
     font-size: 0.9rem;
     color: rgb(223, 223, 223);
+    font-family: "Outfit", sans-serif;
 }
 
 .ftArtist {
