--- a/src/pages/home/index.module.css
+++ b/src/pages/home/index.module.css
@@ -77,6 +77,20 @@
     height: 200px;
 }
 
+.divTopMusics {
+    width: 98%;
+    display: flex;
+    flex-direction: column;
+    color: white;
+}
+
+.containerTopMusics {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 100%;
+}
+
 .divMusicBar {
     display: flex;
     align-items: center;
