--- a/src/components/music/index.module.css
+++ b/src/components/music/index.module.css
@@ -9,6 +9,7 @@
     border-radius: 5px;
     margin-bottom: 20px;
     box-shadow: 0px 0px 10px rgb(17, 17, 17);
+    cursor: pointer;
 }
 
 .imgMusic{
