--- a/src/components/infoMusic/index.module.css
+++ b/src/components/infoMusic/index.module.css
@@ -1,12 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 
 .main{
-    width: 100%;
-    height: 100%;
+    width: 25%;
+    height: 97%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+    background: #1D1D1D;
+    box-shadow: 0px 0px 10px rgb(10, 10, 10);
+    border-radius: 10px;
     color: white;
 }
 
