--- a/src/components/dashboard/_components/search/index.module.css
+++ b/src/components/dashboard/_components/search/index.module.css
@@ -19,3 +19,15 @@
     border-bottom-left-radius: 6px;
     border-top-left-radius: 6px;
 }
+
+.button{
+    border: none;
+    height: 100%;
+    border-bottom-right-radius: 6px;
+    border-top-right-radius: 6px;
+    background-color: #434343;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
