--- a/src/components/footer/_components/multiMedia/index.module.css
+++ b/src/components/footer/_components/multiMedia/index.module.css
@@ -16,7 +16,10 @@
     width: 100%;
     height: 50%;
     display: flex;
-    justify-content: center;
+    align-items: center;
+    justify-content: space-between;
+    color: rgb(196, 196, 196);
+    font-size: 0.8rem;
 }
 
 .inputRange {
