fix: fix footer

--- a/src/components/BarPlaylists/index.module.css
+++ b/src/components/BarPlaylists/index.module.css
@@ -6,7 +6,7 @@
     width: 5%;
     height: 97%;
     border-radius: 10px;
-    background: #1D1D1D;
+    background: #121212;
     box-shadow: 0px 0px 10px rgb(10, 10, 10);
 }
 
