--- a/src/components/Music/index.module.css
+++ b/src/components/Music/index.module.css
@@ -5,10 +5,10 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
-    background-color: #2C2C2C;
+    background-color: #1D1D1D;
     border-radius: 5px;
     margin-bottom: 20px;
-    box-shadow: 0px 0px 10px #1b1b1b;
+    box-shadow: 0px 0px 10px #101010;
     cursor: pointer;
 }
 
