--- a/src/components/dashboard/_components/search/index.module.css
+++ b/src/components/dashboard/_components/search/index.module.css
@@ -6,7 +6,7 @@
     align-items: center;
     background-color: #434343;
     border-radius: 6px;
-    box-shadow: 0px 0px 10px #1b1b1b;
+    box-shadow: 0px 0px 10px #101010;
 }
 
 .inputSearch{
