--- a/src/components/dashboard/index.module.css
+++ b/src/components/dashboard/index.module.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    background: #1D1D1D;
+    background: #121212;
     border-radius: 10px;
     width: 67.5%;
     height: 97%;
