--- a/src/components/footer/_components/multiMedia/index.module.css
+++ b/src/components/footer/_components/multiMedia/index.module.css
@@ -7,7 +7,7 @@
     display: flex;
     align-items: end;
     justify-content: center;
-    gap: 15%;
+    gap: 10%;
     width: 100%;
     height: 50%;
 }
@@ -18,11 +18,21 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    color: rgb(196, 196, 196);
-    font-size: 0.8rem;
 }
 
 .inputRange {
     width: 100%;
     height: 4px;
+}
+
+.currentTime{
+    color: rgb(196, 196, 196);
+    font-size: 0.7rem;
+    width: 5%;
+}
+
+.duration{
+    color: rgb(196, 196, 196);
+    font-size: 0.7rem;
+    width: 5%;
 }
