--- a/src/components/infoMusic/index.module.css
+++ b/src/components/infoMusic/index.module.css
@@ -7,7 +7,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    background: #1D1D1D;
+    background: #121212;
     box-shadow: 0px 0px 10px rgb(10, 10, 10);
     border-radius: 10px;
     color: white;
