--- a/src/pages/home/index.module.css
+++ b/src/pages/home/index.module.css
@@ -13,6 +13,25 @@
     height: 88%;
 }
 
+
+.dashborad {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    background: #121212;
+    border-radius: 10px;
+    width: 67.5%;
+    height: 97%;
+    overflow: auto;
+    box-shadow: 0px 0px 10px rgb(10, 10, 10);
+}
+
+.containerSearch {
+    margin-top: 10px;
+    width: 98%;
+}
+
 ::-webkit-scrollbar {
     width: 5px;
 }
