--- a/src/components/playlists/_components/playlist/index.module.css
+++ b/src/components/playlists/_components/playlist/index.module.css
@@ -1,17 +1,64 @@
-
-.main{
+.main {
     width: 100%;
     height: 60px;
     border-radius: 6px;
     box-shadow: 0px 0px 10px #101010;
     cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: white;
+    border: 1px transparent solid;
+    background-color: #191919;
 }
 
-.main:hover{
+.main:hover {
     width: 100%;
     height: 60px;
     border-radius: 6px;
-    box-shadow: 0px 0px 10px #191919;
-    transform: scale(1.07);
     cursor: pointer;
+}
+
+.ftPlaylist {
+    width: 102%;
+    height: 102%;
+}
+
+.ftPlaylistExpanded {
+    width: 17%;
+    height: 85%;
+    margin-left: 5px;
+}
+
+.ftTXT {
+    display: none;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.ftTXTExpanded {
+    width: 80%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.playlistName {
+    display: none;
+}
+
+.playlistNameExpanded {
+    display: block;
+}
+
+.iconeTrash {
+    display: none;
+}
+
+.iconeTrashExpanded {
+    display: block;
 }
