--- a/src/components/playlists/index.module.css
+++ b/src/components/playlists/index.module.css
@@ -1,5 +1,6 @@
-
 .playlistBar {
+    left: 0%;
+    position: absolute;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -8,23 +9,72 @@
     border-radius: 10px;
     background: #121212;
     box-shadow: 0px 0px 10px rgb(10, 10, 10);
+    overflow: hidden;
 }
 
-.containerbtnPlaylistbar{
+.playlistBarExpanded {
+    left: 0%;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 28%;
+    height: 97%;
+    border-radius: 10px;
+    background: #121212;
+    box-shadow: 0px 0px 10px rgb(10, 10, 10);
+    overflow: auto;
+}
+
+.containerbtnPlaylistbar {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 80%;
     height: 10%;
+    margin-left: 7px;
 }
 
-.divPlaylist{
+.containerbtnPlaylistbarExpanded {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 10%;
+    margin-right: -10px;
+}
+
+.myPlaylists {
+    color: white;
+    width: 95%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 10px;
+}
+
+.myPlayliststxt{
+    font-size: 2rem;
+    font-weight: 600;
+}
+
+.divPlaylist {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 20px;
     width: 80%;
     height: 90%;
-    margin-top: 15px;
+    margin-top: 30px;
+}
+.divPlaylistExpanded {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    width: 95%;
+    height: 90%;
+    margin-top: 30px;
 }
 
+.btns{
+    display: flex;
+}
