--- a/src/pages/home/index.module.css
+++ b/src/pages/home/index.module.css
@@ -2,14 +2,19 @@
     background: #000000;
     width: 100vw;
     height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .divPricipal {
+    position: relative;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: end;
     gap: 10px;
-    width: 100%;
+    width: 99%;
     height: 88%;
 }
 
@@ -21,7 +26,7 @@
     justify-content: space-around;
     background: #121212;
     border-radius: 10px;
-    width: 67.5%;
+    width: 70%;
     height: 97%;
     overflow: auto;
     box-shadow: 0px 0px 10px rgb(10, 10, 10);
@@ -30,6 +35,11 @@
 .containerSearch {
     margin-top: 10px;
     width: 98%;
+}
+
+.divPlaylist{
+    width: 5%;
+    height: 97%;
 }
 
 ::-webkit-scrollbar {
