--- a/src/components/playlists/index.module.css
+++ b/src/components/playlists/index.module.css
@@ -45,6 +45,7 @@
 .myPlaylists {
     color: white;
     width: 95%;
+    height: 10%;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -71,7 +72,7 @@
     align-items: center;
     gap: 20px;
     width: 95%;
-    height: 90%;
+    height: auto;
     margin-top: 30px;
 }
 
