--- a/src/components/Music/index.module.css
+++ b/src/components/Music/index.module.css
@@ -27,10 +27,11 @@
 }
 
 .divMultMedia{
-    width: 15%;
+    width: 5%;
     height: 80%;
     display: flex;
     align-items: center;
+    flex-direction: column-reverse;
     justify-content: space-around;
 }
 
