--- a/src/components/playlists/_components/playlist/index.module.css
+++ b/src/components/playlists/_components/playlist/index.module.css
@@ -12,6 +12,17 @@
     background-color: #191919;
 }
 
+.infoPlaylist{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.creationDate{
+    font-size: 0.7rem;
+    overflow: hidden;
+}
+
 .main:hover {
     width: 100%;
     height: 60px;
