--- a/src/components/playlists/_components/newPlaylist/index.module.css
+++ b/src/components/playlists/_components/newPlaylist/index.module.css
@@ -30,13 +30,31 @@
     width: 79%;
     height: 30px;
     border-radius: 5px;
-    border: 1px white solid;
+    border: none;
     padding-left: 10px;
     color: white;
-    background-color: #101010;
+    background-color: #333;
 }
 
 .txtNovaPlaylist{
     width: 95%;
     left: 0%;
+}
+
+.customFileUpload {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-width: 15%;
+    width: auto;
+    height: 32px;
+    cursor: pointer;
+    color: #fff;
+    background-color: #333;
+    border-radius: 5px;
+    font-weight: 400;
+}
+
+.customFileUpload input[type="file"] {
+    display: none;
 }
