--- a/src/components/playlists/index.module.css
+++ b/src/components/playlists/index.module.css
@@ -24,6 +24,7 @@
     background: #121212;
     box-shadow: 0px 0px 10px rgb(10, 10, 10);
     overflow: auto;
+    z-index: 1;
 }
 
 .containerbtnPlaylistbar {
