--- a/src/pages/artist/index.module.css
+++ b/src/pages/artist/index.module.css
@@ -45,9 +45,12 @@
 }
 
 .divMusic{
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     color: white;
+    margin-top: 20px;
 }
 
 .music{
