--- a/src/pages/home/_components/topPlaylists/index.module.css
+++ b/src/pages/home/_components/topPlaylists/index.module.css
@@ -1,8 +1,10 @@
 .divTopPlaylists {
+    position: relative;
     width: 98%;
     display: flex;
     flex-direction: column;
     color: white;
+    margin-top: 20px;
 }
 
 .containerTopPlaylists {
