--- a/src/pages/playlist/index.module.css
+++ b/src/pages/playlist/index.module.css
@@ -47,9 +47,12 @@
 }
 
 .divMusic {
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     color: white;
+    margin-top: 20px;
 }
 
 .music {
