--- a/src/components/Music/index.module.css
+++ b/src/components/Music/index.module.css
@@ -1,10 +1,10 @@
 
 .main{
     width: 100%;
-    height: 55px;
+    height: 50px;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    gap: 5px;
     background-color: #1D1D1D;
     border-radius: 5px;
     margin-bottom: 20px;
@@ -13,16 +13,18 @@
 }
 
 .imgMusic{
-    width: 4.5%;
-    height: 80%;
-    border-radius: 3px;
+    width: 5%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .divInfo{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    width: 77%;
+    width: 80%;
     height: 80%;
 }
 
@@ -32,18 +34,27 @@
     display: flex;
     align-items: center;
     flex-direction: column-reverse;
-    justify-content: space-around;
+    justify-content: center;
 }
 
 .groupName{
     font-size: 0.9rem;
     color: #888888;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 .trackTitle{
     color: white;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 .trackTitleActive{
     color: chartreuse;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
