--- a/src/components/btnHome/index.module.css
+++ b/src/components/btnHome/index.module.css
@@ -1,7 +1,7 @@
 .main{
     background-color: black;
-    width: 50px;
-    height: 50px;
+    width: 100%;
+    height: 100%;
     border-radius: 50%;
     display: flex;
     align-items: center;
