--- a/src/components/footer/_components/musicMenu/index.module.css
+++ b/src/components/footer/_components/musicMenu/index.module.css
@@ -3,7 +3,7 @@
 .main{
     display: flex;
     align-items: center;
-    gap: 15px;
+   justify-content: space-around;
     width: 33.33%;
     height: 100%;
     font-family: "Outfit", sans-serif;
@@ -12,17 +12,18 @@
 .containerFt{
     width: 13%;
     height: 77%;
-    margin-left: 2.7%;
+    margin-left: 0.8%;
     border-radius: 10px;
     box-shadow: 0px 0px 10px #040404;
 }
 
 .containerMusicName{
+    width: 80%;
     color: white;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 5px;
+    gap: 10px;
 }
 
 .txtGroupName{
