--- a/src/components/infoMusic/index.module.css
+++ b/src/components/infoMusic/index.module.css
@@ -27,20 +27,32 @@
 }
 
 .bandaName{
-    font-size: 1.3rem;
+    width: 100%;
+    font-size: 2.3vw;
     font-weight: 600;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 .infoMusic{
-    font-size: 0.9rem;
+    width: 100%;
+    font-size: 1.1vw;
     font-family: "Outfit", sans-serif;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 .verAlbum{
+    width: 100%;
     display: flex;
     align-items: center;
-    font-size: 0.9rem;
+    font-size: 1.1vw;
     font-family: "Outfit", sans-serif;
     cursor: pointer;
     color: #999999;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
