--- a/src/components/playlists/index.module.css
+++ b/src/components/playlists/index.module.css
@@ -4,8 +4,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 5%;
-    height: 97%;
+    width: 100%;
+    height: 100%;
     border-radius: 10px;
     background: #121212;
     box-shadow: 0px 0px 10px rgb(10, 10, 10);
@@ -18,8 +18,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 28%;
-    height: 97%;
+    width: 600%;
+    height: 100%;
     border-radius: 10px;
     background: #121212;
     box-shadow: 0px 0px 10px rgb(10, 10, 10);
@@ -49,6 +49,16 @@
     height: 10%;
     display: flex;
     align-items: center;
+    justify-content: center;
+    margin-top: 10px;
+}
+
+.myPlaylistsExpanded {
+    color: white;
+    width: 95%;
+    height: 10%;
+    display: flex;
+    align-items: center;
     justify-content: space-between;
     margin-top: 10px;
 }
@@ -65,7 +75,7 @@
     gap: 20px;
     width: 80%;
     height: 90%;
-    margin-top: 30px;
+    margin-top: 10px;
 }
 .divPlaylistExpanded {
     display: flex;
@@ -74,7 +84,7 @@
     gap: 20px;
     width: 95%;
     height: auto;
-    margin-top: 30px;
+    margin-top: 10px;
 }
 
 .btns{
