--- a/src/components/search/index.module.css
+++ b/src/components/search/index.module.css
@@ -1,7 +1,7 @@
 
 .divSearch{
-    height: 40px;
     width: 60%;
+    height: 90%;
     display: flex;
     align-items: center;
     background-color: #434343;
