--- a/src/pages/home/_components/topArtists/_components/Artist/index.module.css
+++ b/src/pages/home/_components/topArtists/_components/Artist/index.module.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 
 .main {
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -8,21 +10,29 @@
     font-size: 0.9rem;
     color: rgb(223, 223, 223);
     font-family: "Outfit", sans-serif;
+    overflow: hidden;
 }
 
 .ftArtist {
-    width: 130px;
-    height: 130px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 90%;
+    height: 90%;
     border-radius: 50%;
     cursor: pointer;
     box-shadow: 0px 0px 10px #101010;
-    transition: 100ms;
-    border: 1px solid transparent;
 }
 
-.ftArtist:hover {
+.artistFt{
+    border: 1px solid transparent;
+    width: 90%;
+    height: 90%;
     border-radius: 50%;
-    cursor: pointer;
+    transition: 200ms;
+}
+
+.artistFt:hover{
     transform: scale(1.07);
     border: 1px solid #00df60;
 }
