--- a/src/pages/home/_components/topPlaylists/_components/Playlist/index.module.css
+++ b/src/pages/home/_components/topPlaylists/_components/Playlist/index.module.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 
 .main{
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -8,20 +10,28 @@
     font-size: 0.9rem;
     color: rgb(223, 223, 223);
     font-family: "Outfit", sans-serif;
+    overflow: hidden;
 }
 
 .ftPlaylist{
-    width: 130px;
-    height: 130px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 80%;
+    height: 90%;
     cursor: pointer;
     transition: 100ms;
     box-shadow: 0px 0px 10px #101010;
+}
+
+.playlistFt{
+    width: 100%;
+    border-radius: 6px;
+    transition: 200ms;
     border: 1px solid transparent;
 }
 
-.ftPlaylist:hover{
-    border-radius: 6px;
-    cursor: pointer;
+.playlistFt:hover{
     border: 1px solid #00df60;
     transform: scale(1.07);
 }
