--- a/src/pages/home/index.module.css
+++ b/src/pages/home/index.module.css
@@ -1,21 +1,19 @@
 .page {
-    background: #000000;
     width: 100vw;
     height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    background: #000000;
 }
 
 .divPricipal {
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: end;
-    gap: 10px;
     width: 99%;
     height: 88%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 10px;
 }
 
 
@@ -35,20 +33,24 @@
 .containerSearch {
     margin-top: 10px;
     width: 98%;
+    height: 8%;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-.containerPlaylist{
+.containerPlaylist {
+    position: relative;
     width: 5%;
     height: 97%;
 }
 
-.divBtnHome{
+.divBtnHome {
     display: flex;
-    justify-content: end;
+    align-items: center;
+    justify-content: center;
     width: 5%;
+    height: 100%;
 }
 
 ::-webkit-scrollbar {
