--- a/src/pages/myPlaylist/_components/infoPlaylist/index.module.css
+++ b/src/pages/myPlaylist/_components/infoPlaylist/index.module.css
@@ -12,23 +12,34 @@
 .divInfo{
     display: flex;
     flex-direction: column;
+    justify-content: center;
     width: 75%;
     color: white;
-    padding-left: 15px;
     gap: 10px;
 }
 
 .playlistName{
+    width: 100%;
+    margin-left: 8px;
     font-size: 5rem;
     font-weight: 600;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
-.creatorName{
-    margin-left: 5px;
+.creationDate{
+    width: 100%;
+    margin-left: 13px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 .divBtnHome{
     display: flex;
-    justify-content: end;
+    align-items: center;
+    justify-content: center;
     width: 5%;
+    height: 25%;
 }
