--- a/src/pages/artist/index.module.css
+++ b/src/pages/artist/index.module.css
@@ -1,21 +1,19 @@
 .page {
-    background: #000000;
     width: 100vw;
     height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    background: #000000;
 }
 
 .divPricipal {
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: end;
-    gap: 10px;
     width: 99%;
     height: 88%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 10px;
 }
 
 
@@ -32,7 +30,7 @@
     box-shadow: 0px 0px 10px rgb(10, 10, 10);
 }
 
-/*Playlist page*/
+/*Artist page*/
 
 .divPlaylist{
     width: 97%;
@@ -40,6 +38,7 @@
 }
 
 .containerPlaylist{
+    position: relative;
     width: 5%;
     height: 97%;
 }
