--- a/src/pages/playlist/index.module.css
+++ b/src/pages/playlist/index.module.css
@@ -54,10 +54,19 @@
     margin-top: 20px;
 }
 
+.container_musics{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    color: white;
+}
+
 .music {
     font-size: 1.2rem;
     margin-top: 20px;
     margin-bottom: 20px;
+    left: 0%;
     color: white;
 }
 
