--- a/src/components/Music/_components/suspenseMenu/_components/playlist/index.module.css
+++ b/src/components/Music/_components/suspenseMenu/_components/playlist/index.module.css
@@ -1,7 +1,7 @@
 .playlist{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 8px;
+    width: 180px;
     margin: 10px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
