--- a/src/components/Music/_components/suspenseMenu/index.module.css
+++ b/src/components/Music/_components/suspenseMenu/index.module.css
@@ -1,20 +1,27 @@
-
-.main{
-    z-index: 1;
-    background: #121212;
-    box-shadow: 0px 0px 10px rgb(10, 10, 10);
-    border-radius: 3px;
+.main {
+    position: absolute;
     width: 180px;
+    transform: translate(-50%, 40px);
+    height: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background: #121212;
+    box-shadow: 0px 0px 10px rgb(10, 10, 10);
+    border-radius: 3px;
+    z-index: 1;
+    padding: 3px 10px;
 }
 
-.empty{
+.empty {
+    width: 180px;
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 8px;
     margin: 10px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
