--- a/src/components/Music/index.module.css
+++ b/src/components/Music/index.module.css
@@ -1,39 +1,34 @@
 
 .main{
-    width: 100%;
+    width: 99%;
     height: 50px;
     display: flex;
     align-items: center;
-    gap: 5px;
+    justify-content: space-between;
     background-color: #1D1D1D;
+    box-shadow: 0px 0px 10px #101010;
     border-radius: 5px;
     margin-bottom: 20px;
-    box-shadow: 0px 0px 10px #101010;
+    padding: 3px 5px;
+    gap: 10px;
     cursor: pointer;
 }
 
-.imgMusic{
-    width: 5%;
+.divInfo{
+    width: 100%;
     height: 100%;
     display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.divInfo{
-    display: flex;
     flex-direction: column;
-    justify-content: space-around;
-    width: 80%;
-    height: 80%;
+    justify-content: center;
 }
 
 .divMultMedia{
     width: 5%;
     height: 80%;
+    position: relative;
     display: flex;
+    flex-direction: column;
     align-items: center;
-    flex-direction: column-reverse;
     justify-content: center;
 }
 
