--- a/src/components/btnHome/index.module.css
+++ b/src/components/btnHome/index.module.css
@@ -1,11 +1,10 @@
 .main{
-    background-color: black;
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
-    cursor: pointer;
+    background-color: black;
     box-shadow: 0px 0px 5px rgb(14, 14, 14);
+    border-radius: 50%;
+    padding: 10px;
+    cursor: pointer;
 }
