--- a/src/components/footer/_components/multiMidia/index.module.css
+++ b/src/components/footer/_components/multiMidia/index.module.css
@@ -1,6 +1,10 @@
 .main {
     width: 33.33%;
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .containerOP {
