--- a/src/components/search/index.module.css
+++ b/src/components/search/index.module.css
@@ -1,7 +1,6 @@
 
 .divSearch{
     width: 60%;
-    height: 90%;
     display: flex;
     align-items: center;
     background-color: #434343;
@@ -13,8 +12,7 @@
     width: 95%;
     border: none;
     background-color: #434343;
-    padding-left: 20px;
-    font-size: 1rem;
+    padding: 10px;
     color: white;
     border-bottom-left-radius: 6px;
     border-top-left-radius: 6px;
@@ -22,7 +20,6 @@
 
 .button{
     border: none;
-    height: 100%;
     border-bottom-right-radius: 6px;
     border-top-right-radius: 6px;
     background-color: #434343;
