--- a/src/pages/artist/_components/infoArtist/index.module.css
+++ b/src/pages/artist/_components/infoArtist/index.module.css
@@ -1,11 +1,11 @@
 .divInfoArtist{
+    position: relative;
     display: flex;
     width: 100%;
     height: 200px;
 }
 
 .artistIMG{
-    width: 20%;
     height: 100%;
 }
 
@@ -28,6 +28,8 @@
 }
 
 .divBtnHome{
+    position: absolute;
+    right: 0%;
     display: flex;
     align-items: center;
     justify-content: center;
