--- a/src/pages/artist/index.module.css
+++ b/src/pages/artist/index.module.css
@@ -52,6 +52,14 @@
     margin-top: 20px;
 }
 
+.container_musics{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    color: white;
+}
+
 .music{
     font-size: 1.2rem;
     margin-top: 20px;
