--- a/src/pages/home/_components/topMusic/index.module.css
+++ b/src/pages/home/_components/topMusic/index.module.css
@@ -3,11 +3,11 @@
     display: flex;
     flex-direction: column;
     color: white;
-    margin-top: 20px;
 }
 
 .containerTopMusics {
-    display: flex;
-    flex-direction: column;
     width: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
