--- a/src/pages/myPlaylist/_components/infoPlaylist/index.module.css
+++ b/src/pages/myPlaylist/_components/infoPlaylist/index.module.css
@@ -1,11 +1,11 @@
 .divInfoPlaylist{
+    position: relative;
     display: flex;
     width: 100%;
     height: 200px;
 }
 
 .playlistIMG{
-    width: 20%;
     height: 100%;
 }
 
@@ -37,6 +37,8 @@
 }
 
 .divBtnHome{
+    position: absolute;
+    right: 0%;
     display: flex;
     align-items: center;
     justify-content: center;
