--- a/src/pages/artist/index.module.css
+++ b/src/pages/artist/index.module.css
@@ -21,7 +21,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-around;
+    justify-content: start;
     background: #121212;
     border-radius: 10px;
     width: 70%;
