--- a/src/pages/artist/_components/infoArtist/index.module.css
+++ b/src/pages/artist/_components/infoArtist/index.module.css
@@ -33,7 +33,7 @@
     right: 0%;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: end;
     width: 5%;
     height: 25%;
 }
