--- a/src/components/Music/index.module.css
+++ b/src/components/Music/index.module.css
@@ -18,7 +18,7 @@
     background-color: #3e3e3e;
 }
 
-.divInfo {
+.div_info {
     width: 100%;
     height: 100%;
     display: flex;
@@ -26,7 +26,7 @@
     justify-content: center;
 }
 
-.divMultMedia {
+.div_multi_midia {
     width: 5%;
     height: 80%;
     position: relative;
@@ -36,7 +36,7 @@
     justify-content: center;
 }
 
-.groupName {
+.group_name {
     font-size: 0.9rem;
     color: #888888;
     overflow: hidden;
@@ -44,14 +44,14 @@
     text-overflow: ellipsis;
 }
 
-.trackTitle {
+.track_title {
     color: white;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
 }
 
-.trackTitleActive {
+.track_title_active {
     color: chartreuse;
     overflow: hidden;
     white-space: nowrap;
