--- a/src/components/footer/_components/multiMidia/index.module.css
+++ b/src/components/footer/_components/multiMidia/index.module.css
@@ -1,5 +1,5 @@
 .main {
-    width: 33.33%;
+    width: 50%;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -7,7 +7,7 @@
     justify-content: center;
 }
 
-.containerOP {
+.container_op {
     display: flex;
     align-items: end;
     justify-content: center;
@@ -16,12 +16,17 @@
     height: 50%;
 }
 
-.containerTime {
+.container_time {
     width: 100%;
     height: 50%;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
+    gap: 10px;
+}
+
+.slider {
+    width: 80%;
 }
 
 .inputRange {
@@ -29,14 +34,48 @@
     height: 4px;
 }
 
-.currentTime{
+.current_time {
     color: rgb(196, 196, 196);
     font-size: 0.7rem;
     width: 5%;
 }
 
-.duration{
+.duration {
     color: rgb(196, 196, 196);
     font-size: 0.7rem;
     width: 5%;
+}
+
+
+@media (max-width: 768px) {
+    .main {
+        width: auto;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .container_time {
+        width: 100%;
+        height: 50%;
+        display: none;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+    }
+
+    .next_back{
+        display: none;
+    }
+
+    .container_op {
+        display: flex;
+        align-items: end;
+        justify-content: center;
+        gap: 10%;
+        width: auto;
+        height: 50%;
+    }
 }
