--- a/src/components/footer/index.module.css
+++ b/src/components/footer/index.module.css
@@ -1,7 +1,6 @@
-.divMusicBar {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
+.main {
     width: 100%;
-    height: 12%;
+    display: flex;
+    justify-content: space-between;
+   
 }
