--- a/src/components/infoMusic/index.module.css
+++ b/src/components/infoMusic/index.module.css
@@ -1,32 +1,35 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 
-.main{
+.main {
     width: 25%;
-    height: 97%;
+    height: 100%;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
     background: #121212;
-    box-shadow: 0px 0px 10px rgb(10, 10, 10);
     border-radius: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    gap: 10px;
     color: white;
 }
 
-.imgMusic{
-    width: 93%;
-    height: 70%;
+.img_music {
+    width: 100%;
+    height: 75%;
     border-radius: 10px;
+    margin-top: 10px;
 }
 
-.text{
-    width: 93%;
+.text {
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    gap: 10px;
+    padding-left: 5px;
 }
 
-.bandaName{
+.banda_name {
     width: 100%;
     font-size: 2rem;
     font-weight: 600;
@@ -35,7 +38,7 @@
     text-overflow: ellipsis;
 }
 
-.infoMusic{
+.info_music {
     width: 100%;
     font-size: 1rem;
     font-family: "Outfit", sans-serif;
@@ -44,15 +47,32 @@
     text-overflow: ellipsis;
 }
 
-.verAlbum{
-    width: 100%;
-    display: flex;
-    align-items: center;
-    font-size: 1rem;
-    font-family: "Outfit", sans-serif;
-    cursor: pointer;
-    color: #999999;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
+@media (min-width: 768px) and (max-width: 1024px) {
+    .main {
+        width: 25%;
+        height: 100%;
+        display: none;
+        flex-direction: column;
+        background: #121212;
+        border-radius: 10px;
+        padding-left: 10px;
+        padding-right: 10px;
+        gap: 10px;
+        color: white;
+    }
+}
+
+@media (max-width: 768px) {
+    .main {
+        width: 25%;
+        height: 100%;
+        display: none;
+        flex-direction: column;
+        background: #121212;
+        border-radius: 10px;
+        padding-left: 10px;
+        padding-right: 10px;
+        gap: 10px;
+        color: white;
+    }
 }
