--- a/src/components/search/index.module.css
+++ b/src/components/search/index.module.css
@@ -1,5 +1,5 @@
 
-.divSearch{
+.main{
     width: 60%;
     display: flex;
     align-items: center;
@@ -8,7 +8,7 @@
     box-shadow: 0px 0px 10px #101010;
 }
 
-.inputSearch{
+.input_search{
     width: 95%;
     border: none;
     background-color: #434343;
@@ -18,7 +18,7 @@
     border-top-left-radius: 6px;
 }
 
-.button{
+.lupa{
     border: none;
     border-bottom-right-radius: 6px;
     border-top-right-radius: 6px;
@@ -27,4 +27,26 @@
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+@media (min-width: 768px) and (max-width: 1024px){
+    .main{
+        width: 70%;
+        display: flex;
+        align-items: center;
+        background-color: #434343;
+        border-radius: 6px;
+        box-shadow: 0px 0px 10px #101010;
+    }
+}
+
+@media (max-width: 768px){
+    .main{
+        width: 70%;
+        display: flex;
+        align-items: center;
+        background-color: #434343;
+        border-radius: 6px;
+        box-shadow: 0px 0px 10px #101010;
+    }
 }
