--- a/src/pages/home/_components/topArtists/index.module.css
+++ b/src/pages/home/_components/topArtists/index.module.css
@@ -1,12 +1,11 @@
-.divTopArtists {
-    width: 98%;
+.main {
+    width: 100%;
     display: flex;
     flex-direction: column;
     color: white;
 }
 
-.containerTopArtists {
+.container_top_artists {
     display: flex;
     justify-content: space-between;
-    width: 100%;
 }
