--- a/src/pages/home/_components/topMusic/index.module.css
+++ b/src/pages/home/_components/topMusic/index.module.css
@@ -1,11 +1,11 @@
-.divTopMusics {
-    width: 98%;
+.main {
+    width: 100%;
     display: flex;
     flex-direction: column;
     color: white;
 }
 
-.containerTopMusics {
+.container_top_musics {
     width: 100%;
     display: flex;
     align-items: center;
