--- a/src/pages/home/_components/topPlaylists/_components/Playlist/index.module.css
+++ b/src/pages/home/_components/topPlaylists/_components/Playlist/index.module.css
@@ -10,7 +10,7 @@
     font-family: "Outfit", sans-serif;
 }
 
-.playlistFt{
+.playlist_ft{
     width: 90%;
     height: 90%;
     border-radius: 6px;
@@ -18,7 +18,7 @@
     border: 1px solid transparent;
 }
 
-.playlistFt:hover{
+.playlist_ft:hover{
     border: 1px solid #00df60;
     transform: scale(1.07);
 }
