--- a/src/pages/home/_components/topPlaylists/index.module.css
+++ b/src/pages/home/_components/topPlaylists/index.module.css
@@ -1,11 +1,11 @@
-.divTopPlaylists {
-    width: 98%;
+.main {
+    width: 100%;
     display: flex;
     flex-direction: column;
     color: white;
 }
 
-.containerTopPlaylists {
+.container_top_playlists {
     display: flex;
     justify-content: space-between;
     width: 100%;
