--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 
-body{
+* {
+    box-sizing: border-box;
+}
+
+body {
     margin: 0%;
     padding: 0%;
-    min-width: 100vw;
-    min-height: 100vh;
     font-family: "Outfit", sans-serif;
 }
 
