--- a/src/components/Music/index.module.css
+++ b/src/components/Music/index.module.css
@@ -1,42 +1,43 @@
-.main {
-    width: 99%;
-    height: 50px;
+.main{
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: #1D1D1D;
-    box-shadow: 0px 0px 10px #101010;
+    padding: 5px 5px;
+    background-color: #2C2C2C;
     border-radius: 5px;
-    margin-bottom: 20px;
-    padding: 3px 5px;
-    gap: 10px;
-    cursor: pointer;
     transition: 200ms;
+    cursor: pointer;
 }
 
-.main:hover {
-    background-color: #3e3e3e;
+.main:hover{
+    background-color: #424242;
 }
 
-.div_info {
-    width: 100%;
-    height: 100%;
+.container_info{
+    width: 40%;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.div_multi_midia {
-    width: 5%;
-    height: 80%;
-    position: relative;
-    display: flex;
-    flex-direction: column;
     align-items: center;
-    justify-content: center;
+    gap: 10px;
 }
 
-.group_name {
+.container_info_txt{
+    flex-grow: 1;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+}
+
+.music_name{
+    width: 100%;
+    font-size: 1.1rem;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
+.artist_name{
+    width: 100%;
     font-size: 0.9rem;
     color: #888888;
     overflow: hidden;
@@ -44,16 +45,7 @@
     text-overflow: ellipsis;
 }
 
-.track_title {
-    color: white;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-}
-
-.track_title_active {
-    color: chartreuse;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
+.container_btn{
+    display: flex;
+    gap: 5px;
 }
