--- a/src/components/footer/_components/multiMidia/index.module.css
+++ b/src/components/footer/_components/multiMidia/index.module.css
@@ -1,81 +1,27 @@
 .main {
-    width: 50%;
-    height: 100%;
+    width: 40%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
 }
 
-.container_op {
-    display: flex;
-    align-items: end;
-    justify-content: center;
-    gap: 10%;
+.container_multimidia {
     width: 100%;
-    height: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
 }
 
 .container_time {
     width: 100%;
-    height: 50%;
     display: flex;
     align-items: center;
-    justify-content: center;
     gap: 10px;
 }
 
-.slider {
-    width: 80%;
-}
-
-.inputRange {
-    width: 100%;
-    height: 4px;
-}
-
-.current_time {
+.txt_time {
     color: rgb(196, 196, 196);
     font-size: 0.7rem;
     width: 5%;
-}
-
-.duration {
-    color: rgb(196, 196, 196);
-    font-size: 0.7rem;
-    width: 5%;
-}
-
-
-@media (max-width: 768px) {
-    .main {
-        width: auto;
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .container_time {
-        width: 100%;
-        height: 50%;
-        display: none;
-        align-items: center;
-        justify-content: center;
-        gap: 10px;
-    }
-
-    .next_back{
-        display: none;
-    }
-
-    .container_op {
-        display: flex;
-        align-items: end;
-        justify-content: center;
-        gap: 10%;
-        width: auto;
-        height: 50%;
-    }
 }
