--- a/src/components/footer/index.module.css
+++ b/src/components/footer/index.module.css
@@ -1,6 +1,6 @@
 .main {
     width: 100%;
+    height: 15%;
     display: flex;
-    justify-content: space-between;
-   
+    align-items: center;
 }
