--- a/src/pages/home/_components/topPlaylists/index.module.css
+++ b/src/pages/home/_components/topPlaylists/index.module.css
@@ -1,12 +1,11 @@
-.main {
+.main{
     width: 100%;
-    display: flex;
-    flex-direction: column;
     color: white;
 }
 
-.container_top_playlists {
-    display: flex;
-    justify-content: space-between;
+.container_top{
     width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
