--- a/src/pages/home/index.module.css
+++ b/src/pages/home/index.module.css
@@ -1,47 +1,38 @@
 .main {
-    width: 100vw;
     height: 100vh;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    background: #000000;
-}
-
-.container_central {
-    width: 99%;
-    height: 98%;
-    gap: 10px;
-    display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    background-color: #000000;
+    padding-top: 5px;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 .container_principal {
     width: 100%;
-    height: auto;
+    height: 85%;
     display: flex;
+    justify-content: space-between;
     gap: 10px;
-    overflow: hidden;
 }
 
-.dashborad {
-    width: 75%;
-    height: 100%;
+.dashboard {
     display: flex;
     flex-direction: column;
-    background: #121212;
-    border-radius: 7px;
-    padding-left: 10px;
-    padding-right: 10px;
+    gap: 10px;
+    width: 75%;
+    height: 100%;
+    background-color: #1D1D1D;
+    border-radius: 10px;
+    padding: 10px 10px;
     overflow: auto;
 }
 
-.container_search {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-top: 5px;
+.info_music {
+    width: 25%;
+    height: 100%;
+    background-color: #1D1D1D;
+    border-radius: 10px;
 }
 
 ::-webkit-scrollbar {
@@ -51,33 +42,4 @@
 ::-webkit-scrollbar-thumb {
     background-color: #1ab75e;
     border-radius: 10px;
-}
-
-@media (min-width: 768px) and (max-width: 1024px) {
-    .dashborad {
-        width: 100%;
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        background: #121212;
-        border-radius: 7px;
-        padding-left: 10px;
-        padding-right: 10px;
-        overflow: auto;
-    }
-}
-
-
-@media (max-width: 768px) {
-    .dashborad {
-        width: 100%;
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        background: #121212;
-        border-radius: 7px;
-        padding-left: 10px;
-        padding-right: 10px;
-        overflow: auto;
-    }
 }
