--- a/src/components/footer/index.module.css
+++ b/src/components/footer/index.module.css
@@ -1,16 +1,18 @@
 .main {
     width: 100%;
-    height: 15%;
     display: flex;
     align-items: center;
     gap: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 
-@media screen and (max-width: 425px){
+@media screen and (max-width: 425px) {
 
     .main {
         width: 100%;
-        height: 10%;
+        padding-top: 5px;
+        padding-bottom: 5px;
         display: flex;
         align-items: center;
         gap: 10px;
